# weather-station-V1

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt
main/Inc/: main.h  user_cjson.h  user_https_client.h
main/Src/: main.c  user_cjson.c  user_https_client.c
